# 22s-pa03-girvan-newman-sanasimps

./: CMakeLists.txt  README.md
data/: dataset.graphml  football.graphml  random_data_1.graphml  random_data_2.graphml  random_data_3.graphml  random_data_4.graphml  random_data_5.graphml  random_data_6.graphml  test_data_1.graphml  test_data_2.graphml  test_data_3.graphml
src/: Graph_helper.cpp  Graph_helper.h  main.cpp
